# django-phaxio

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
django_phaxio/: __init__.py  conf.py  signals.py  urls.py  views.py
docs/: Makefile  conf.py  index.rst  installation.rst  signals.rst  spelling_wordlist.txt  views.rst
phaxio/: __init__.py
tests/: test_views.py
tests/testapp/: settings.py  urls.py
