[metadata]
name = django-phaxio
author = Thermondo GmbH
author-email = opensource@thermondo.de
summary = A Django WebHook handler for Phaxio.
description-file = README.rst
home-page = https://github.com/Thermondo/django-phaxio
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Django
keywords =
    django
    phaxio

[files]
packages =
    django_phaxio

[tool:pytest]
norecursedirs = env .tox .eggs
addopts = --tb=short -rxs --nomigrations
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[pycodestyle]
max-line-length = 99
statistics = true
show-source = true
exclude = docs,runtests.py,setup.py,env

[pydocstyle]
match-dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py
add-ignore = D100

[isort]
atomic = true
multi_line_output = 5
line_length = 79
skip = manage.py,docs
known_first_party = django_phaxio,tests
known_third_party = django
combine_as_imports = true
